feat(user): add api /usr/me
