# server/api/user/router.go
@@ -11,7 +11,8 @@ type Router struct {
 
 func NewRouter(root *ginx.RouterGroup, userApi *UserAPI) Router {
 
-	userGroup := root.Group("/user")
+	userGroup := root.MGroup("/user", ginx.M{route.Private})
+	userGroup.MGET("/me", ginx.M{route.Private}, userApi.Me)
 	userGroup.MGET("/info", ginx.M{route.Private}, userApi.Info)
 	userGroup.MGET("/list", ginx.M{route.Private}, userApi.List)
 
